# clearly-defined

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: rust-ci.yml
src/: error.rs  lib.rs
src/api/: definitions.rs
