[package]
name = "cd"
description = "API interaction for clearlydefined.io"
repository = "https://github.com/EmbarkStudios/clearly-defined"
version = "0.1.0"
authors = ["Embark <opensource@embark-studios.com>", "Jake Shadle <jake.shadle@embark-studios.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/cd"
homepage = "https://github.com/EmbarkStudios/clearly-defined"
keywords = ["license", "spdx"]

[dependencies]
http = "0.2.0"

[dependencies.reqwest]
version = "0.10.1"
optional = true
default-features = false

[features]
client = ["reqwest"]
client-rustls = ["client", "reqwest/rustls-tls"]
client-native = ["client", "reqwest/native-tls"]
